@@ -3,6 +3,12 @@
 # and try again
 #
 
+TAG: pwi-6-0-22-7?
+DATE: 09/19/2023
+STAFF: lec
+wts2-393/Disease to reference annotation
+Lit Triage/Disease Associations
+
 TAG: pwi-6-0-22-74
 DATE: 09/08/2023
 STAFF: lec
